--- a/oceanus-all/oceanus-core/pom.xml
+++ b/oceanus-all/oceanus-core/pom.xml
@@ -12,5 +12,42 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<oceanus.version>0.0.2-SNAPSHOT</oceanus.version>
 	</properties>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+			        <charset>UTF-8</charset>
+			        <docencoding>UTF-8</docencoding>
+		      	</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<attach>true</attach>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
