--- a/oceanus-all/oceanus-exchange/oceanus-exchange-jdbc/pom.xml
+++ b/oceanus-all/oceanus-exchange/oceanus-exchange-jdbc/pom.xml
@@ -41,4 +41,41 @@
 			<version>8.0.3</version>
 		</dependency> 
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+			        <charset>UTF-8</charset>
+			        <docencoding>UTF-8</docencoding>
+		      	</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<attach>true</attach>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
